style(create-survey): adjust question delete button offset to avoid input edge overlap on hover

--- a/src/app/pages/create-survey/create-survey-page.scss
+++ b/src/app/pages/create-survey/create-survey-page.scss
@@ -575,8 +575,8 @@
 
 .question-block__delete {
   position: absolute;
-  top: -30px;
-  right: 8px;
+  top: -36px;
+  right: 12px;
   z-index: 2;
 }
 
@@ -869,8 +869,8 @@
   }
 
   .question-block__delete {
-    top: -28px;
-    right: 2px;
+    top: -34px;
+    right: 8px;
   }
 
   .question-block__row {
